Add modifications: soft IMU rot vel constraints from 3070 server

--- a/train/configs/train_stage2_cfg.yaml
+++ b/train/configs/train_stage2_cfg.yaml
@@ -32,10 +32,10 @@ TRAINING:
     FINAL_DIV_FACTOR: 10000.0
     THREE_PHASE: false
 
-  MIXED_PRECISION: bf16
-  ROT_LOSS_WEIGHT: 0
+  MIXED_PRECISION: fp16
+  ROT_LOSS_WEIGHT: 100.0
   TRANS_LOSS_WEIGHT: 10.0
-  POSE_LOSS_WEIGHT: 1000.0
+  POSE_LOSS_WEIGHT: 500.0
   FLOW_LOSS_WEIGHT: 1e-4
   DEPTH_LOSS_WEIGHT: 1e-3
   POSE_ONLY: false
